# Agents-Lab

./: .gitignore  README.md  gemini_agent.ipynb  pyproject.toml  retrieval_agents.ipynb
crewAI/: 2_research_write_article.ipynb  collaboration_financial_analysis.ipynb  customer_support.ipynb  fake_resume.md  interview_materials.md  job_application_crew.ipynb  job_application_crew_text_input.ipynb  marketing_report.md  office_manager.ipynb  research_write_article.ipynb  tailored_resume.md  tasks_event_planning.ipynb  tools_customer_outreach.ipynb  venue_details.json
crewAI/db/: chroma.sqlite3
notebooks/: gemini_agent.ipynb  retrieval_agents.ipynb  vertex_ai_agents.ipynb
smolagents/: gemini_agent.ipynb  multiagent_notebook.ipynb
